--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/photo/background.jpg);
+    background-image: url(photo/background.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
