--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ body{
     background-color: rgba(3, 38, 77, 0.815);
     color: azure;
     margin-top: 30px;
-    padding: 30px 0;
+    padding: 30px;
 
 }
 .menu{
     background-color:rgba(12, 48, 116, 0.349);
     text-align: center;
     font-size: 0px;
+    width: 100%;
 }
 .menu img{
     text-align: left;
