--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ h2{
     font-weight: bold;
     padding: 8px  36px;
 }
+.item p{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
 
 .item figcaption{
     font-family:monospace;
